--- a/WithTrip/src/main/resources/application.properties
+++ b/WithTrip/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 spring.application.name=WithTrip
-spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/[withtrip]?autoReconnect=true
+
+# HikariCP 설정 (중요: jdbc-url 사용)
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/withtrip?autoReconnect=true
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-test-query=SELECT 1
 
-spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
-
+# MyBatis 설정
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# JSON 매퍼 설정
 spring.mvc.converters.preferred-json-mapper=gson
 
+# 뷰 리졸버 설정
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.html
